--- a/src/app/digital-clock/digital-clock.component.html
+++ b/src/app/digital-clock/digital-clock.component.html
@@ -1,3 +1,4 @@
-<p>
-  digital-clock works!
-</p>
+<div class="container">
+  <div class="clock-face">
+    <span class="clock-hours">{{clockHours}}</span> : <span class="clock-minutes">{{clockMinutes}}</span> : <span class="clock-seconds">{{clockSeconds}}</span></div>
+</div>
